[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/instanced/user_interface/weapon_icon.gd" type="Script" id=1]

[node name="WeaponIcon" type="ColorRect"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
size_flags_vertical = 4
color = Color( 0.145098, 0.172549, 0.862745, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectForeground" type="ColorRect" parent="ColorRectBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_vertical = 4
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
